--- a/assets/css/common.css
+++ b/assets/css/common.css
@@ -5605,8 +5605,15 @@ main > .tit {
   background: url(../img/ico_poly_down.svg) no-repeat 0 60%/2.22222vw 1.66667vw;
 }
 
+.result .btn._description .closed {
+  font-size: 3.61111vw;
+  padding: 0 0 0 2.77778vw;
+  background: url(../img/ico_poly_up.svg) no-repeat 0 60%/2.22222vw 1.66667vw;
+}
+
 .result.form {
   margin-bottom: 0;
+  letter-spacing: -0.03em;
 }
 
 .result.form .book_order_list {
@@ -5616,6 +5623,234 @@ main > .tit {
 .result.form .book_order_list b {
   font-weight: 500;
   color: #666;
+}
+
+.result.form .description_wrap {
+  display: none;
+  padding-top: 5.55556vw;
+}
+
+.result.form .description_wrap.open {
+  display: block;
+}
+
+.result.form .description_wrap .description_txt {
+  font-size: 3.88889vw;
+  color: #333;
+  padding-left: 2.22222vw;
+  position: relative;
+  word-break: keep-all;
+}
+
+.result.form .description_wrap .description_txt b {
+  font-weight: 500;
+}
+
+.result.form .description_wrap .description_txt::before {
+  content: '∙';
+  font-size: 5.55556vw;
+  position: absolute;
+  left: 0;
+  top: 0;
+  line-height: 5.55556vw;
+}
+
+.result.form .percentile_info {
+  margin-top: 2.77778vw;
+  border-top: 1px solid #cacaca;
+}
+
+.result.form .percentile_info th,
+.result.form .percentile_info td {
+  padding: 1.38889vw 0;
+  color: #666;
+  font-size: 3.88889vw;
+  border-bottom: 1px solid #cacaca;
+  border-left: 1px solid #cacaca;
+  text-align: center;
+}
+
+.result.form .percentile_info th:first-child,
+.result.form .percentile_info td:first-child {
+  border-left: 0 solid #000;
+}
+
+.result.form .percentile_info th {
+  font-weight: 500;
+  background-color: #F6F1FF;
+}
+
+.result.form .description_list {
+  margin: 5.55556vw -4.16667vw 0;
+  background-color: #F4F5F7;
+  padding: 5vw 4.16667vw 5.55556vw;
+}
+
+.result.form .description_list dt {
+  font-size: 4.16667vw;
+  font-weight: 500;
+  color: #000;
+  margin-bottom: 1.38889vw;
+  margin-top: 5.55556vw;
+}
+
+.result.form .description_list dt:first-child {
+  margin-top: 0;
+}
+
+.result.form .description_list dd {
+  font-size: 3.88889vw;
+  color: #666;
+  font-weight: 400;
+  line-height: 1.3;
+  padding-left: 2.22222vw;
+  position: relative;
+}
+
+.result.form .description_list dd + dd {
+  margin-top: 2.22222vw;
+}
+
+.result.form .description_list dd::before {
+  content: '-';
+  position: absolute;
+  left: 0;
+}
+
+.result.form .description_list ._description {
+  margin: 5.55556vw auto 0;
+}
+
+.result.form .assessment_tbl {
+  margin: 9.72222vw -4.16667vw 0;
+}
+
+.result.form .assessment_tbl table {
+  border-top: 1px solid #cacaca;
+  color: #666;
+  font-size: 4.16667vw;
+  font-weight: 500;
+}
+
+.result.form .assessment_tbl table th,
+.result.form .assessment_tbl table td {
+  padding: 1.38889vw 0;
+  border-bottom: 1px solid #cacaca;
+  border-left: 1px solid #cacaca;
+  text-align: center;
+}
+
+.result.form .assessment_tbl table th:first-child,
+.result.form .assessment_tbl table td:first-child {
+  border-left: 0 solid #000;
+}
+
+.result.form .assessment_tbl table th {
+  color: #333;
+  background-color: #F4F5F7;
+}
+
+.result.form .assessment_tbl table .point {
+  color: #EA5504;
+}
+
+.result.form .assessment_tbl table tfoot td {
+  color: #333;
+  background-color: #F4F5F7;
+}
+
+.result.form .assessment_list {
+  padding-top: 2.77778vw;
+}
+
+.result.form .assessment_list h3 {
+  font-size: 4.44444vw;
+  font-weight: 500;
+  color: #000;
+  padding-left: 2.77778vw;
+  position: relative;
+  margin: 4.44444vw 0 2.22222vw;
+}
+
+.result.form .assessment_list h3::before {
+  content: '∙';
+  font-size: 6.94444vw;
+  font-weight: 700;
+  position: absolute;
+  left: 0;
+  top: -1.94444vw;
+}
+
+.result.form .assessment_list p {
+  margin: 0 -4.16667vw;
+  padding: 4.16667vw;
+  background-color: #F4F5F7;
+  font-size: 4.16667vw;
+  line-height: 1.4;
+  color: #666;
+}
+
+.result.form .item_evaluation {
+  margin: 0 -4.16667vw;
+}
+
+.result.form .item_evaluation th {
+  padding: 1.38889vw 0;
+  font-size: 4.44444vw;
+  font-weight: 700;
+  background-color: #979797;
+  color: #fff;
+  border-top: 1px solid #cacaca;
+  border-left: 1px solid #cacaca;
+}
+
+.result.form .item_evaluation th:first-child {
+  border-left: 0 solid #000;
+}
+
+.result.form .item_evaluation td {
+  text-align: center;
+  font-size: 4.44444vw;
+  color: #333;
+}
+
+.result.form .item_evaluation td.point {
+  color: #666;
+}
+
+.result.form .item_evaluation td.judgment {
+  color: #EA5504;
+  font-size: 5vw;
+  font-weight: 500;
+}
+
+.result.form .item_evaluation tbody td {
+  background-color: #F4F5F7;
+  padding: 1.38889vw 0;
+  border-left: 1px solid #cacaca;
+  border-bottom: 1px solid #cacaca;
+}
+
+.result.form .item_evaluation tbody td:first-child {
+  border-left: 0 solid #000;
+}
+
+.result.form .item_evaluation tbody td.point {
+  color: #666;
+}
+
+.result.form .item_evaluation tbody td.commentary {
+  background-color: #fff;
+  text-align: left;
+  padding: 4.16667vw;
+  font-size: 4.16667vw;
+  color: #333;
+}
+
+.result.form .item_evaluation tbody td.commentary .t2 {
+  margin-top: 2.77778vw;
+  color: #666;
+  line-height: 1.4;
 }
 
 .result .award_list li {
@@ -5754,7 +5989,13 @@ main > .tit {
 }
 
 .result .radar_chart {
+  padding: 0 4.16667vw;
   margin-top: 5.55556vw;
+}
+
+.result .bar_chart {
+  margin-top: 2.77778vw;
+  height: 69.44444vw;
 }
 
 .form_tit {
