--- a/assets/scss/pages/_result.scss
+++ b/assets/scss/pages/_result.scss
@@ -59,16 +59,214 @@
                 padding:0 0 0 vw(10);
                 background: url(../img/ico_poly_down.svg) no-repeat 0 60% / vw(8)  vw(6);
             }
+            .closed {
+                font-size: vw(13);
+                padding:0 0 0 vw(10);
+                background: url(../img/ico_poly_up.svg) no-repeat 0 60% / vw(8)  vw(6);
+            }
         }
     }
 
     &.form {
         margin-bottom: 0;
+        letter-spacing: -0.03em;
         .book_order_list {
             color:#000;
             b {
                 font-weight: 500;
                 color:#666;
+            }
+        }
+        .description_wrap {
+            display: none;
+            &.open {
+                display: block;
+            }
+            padding-top: vw(20);
+            .description_txt {
+                font-size: vw(14);
+                color:#333;
+                padding-left: vw(8);
+                position: relative;
+                word-break: keep-all;
+                b {
+                    font-weight: 500;
+                }
+                &::before {
+                    content: '∙';
+                    font-size: vw(20);
+                    position: absolute;
+                    left:0;
+                    top:0;
+                    line-height: vw(20);
+                }
+            }
+        }
+        .percentile_info {
+            margin-top: vw(10);
+            border-top: 1px solid #cacaca;
+            th,
+            td {
+                padding:vw(5) 0;
+                color:#666;
+                font-size: vw(14);                
+                border-bottom: 1px solid #cacaca;
+                border-left: 1px solid #cacaca;
+                text-align: center;
+                &:first-child {
+                    border-left: 0 solid #000;
+                }
+            }
+            th {
+                font-weight: 500;
+                background-color: #F6F1FF;
+            }
+        }
+        .description_list {
+            margin:vw(20) vw(-15) 0;
+            background-color: #F4F5F7;
+            padding:vw(18) vw(15) vw(20);
+            dt {
+                font-size: vw(15);
+                font-weight: 500;
+                color:#000;
+                margin-bottom: vw(5);
+                margin-top: vw(20);
+                &:first-child {
+                    margin-top: 0;
+                }
+            }
+            dd {
+                font-size: vw(14);
+                color:#666;
+                font-weight: 400;
+                line-height: 1.3;
+                padding-left: vw(8);
+                position: relative;
+                & + dd {
+                    margin-top: vw(8);
+                }
+                &::before {
+                    content: '-';
+                    position: absolute;
+                    left: 0;
+                }
+            }
+            ._description {
+                margin:vw(20) auto 0;
+            }
+        }
+        .assessment_tbl {
+            margin: vw(35) vw(-15) 0;
+            table {
+                border-top: 1px solid #cacaca;
+                color:#666;
+                font-size: vw(15);
+                font-weight: 500;
+                th,
+                td {
+                    padding:vw(5) 0;
+                    border-bottom: 1px solid #cacaca;
+                    border-left: 1px solid #cacaca;
+                    text-align: center;
+                    &:first-child {
+                        border-left: 0 solid #000;
+                    }
+                }
+                th {
+                    color:#333;
+                    background-color: #F4F5F7;
+                }
+                .point {
+                    color:#EA5504;
+                }
+                tfoot {
+                    td {
+                        color:#333;
+                        background-color: #F4F5F7;
+                    }
+                }
+            }            
+        }
+        .assessment_list {
+            padding-top: vw(10);
+            h3 {
+                font-size: vw(16);
+                font-weight: 500;
+                color:#000;
+                padding-left: vw(10);
+                position: relative;
+                margin:vw(16) 0 vw(8);
+                &::before {
+                    content: '∙';
+                    font-size: vw(25);
+                    font-weight: 700;
+                    position: absolute;
+                    left: 0;
+                    top:vw(-7);
+                }
+            }
+            p {
+                margin:0 vw(-15);
+                padding:vw(15);
+                background-color:#F4F5F7;
+                font-size: vw(15);
+                line-height: 1.4;
+                color:#666;
+            }
+        }
+        .item_evaluation {
+            margin:0 vw(-15);
+            th {
+                padding:vw(5) 0;
+                font-size: vw(16);
+                font-weight: 700;
+                background-color: #979797;
+                color:#fff;
+                border-top: 1px solid #cacaca;
+                border-left: 1px solid #cacaca;
+                &:first-child {
+                    border-left: 0 solid #000;
+                }
+            }
+            td {
+                text-align: center;
+                font-size: vw(16);
+                color:#333;
+                &.point {
+                    color:#666;
+                }
+                &.judgment {
+                    color:#EA5504;
+                    font-size: vw(18);
+                    font-weight: 500;
+                }
+            }
+            tbody {
+                td {
+                    background-color: #F4F5F7;
+                    padding:vw(5) 0;
+                    border-left: 1px solid #cacaca;
+                    border-bottom: 1px solid #cacaca;
+                    &:first-child {
+                        border-left: 0 solid #000;
+                    }
+                    &.point {
+                        color:#666;
+                    }
+                    &.commentary {
+                        background-color: #fff;
+                        text-align: left;
+                        padding:vw(15);
+                        font-size: vw(15);
+                        color:#333;
+                        .t2 {
+                            margin-top: vw(10);
+                            color:#666;
+                            line-height: 1.4;
+                        }
+                    }
+                }
             }
         }
     }
@@ -169,7 +367,12 @@
     } 
 
     .radar_chart {
+        padding:0 vw(15);
         margin-top: vw(20);
+    }
+    .bar_chart {
+        margin-top: vw(10);
+        height: vw(250);
     }
     
 }
